# relay-panel

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  README.en.md  README.md  README.zh-CN.md  deploy.sh  docker-compose.release.yaml  docker-compose.yaml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: binary-release.yml  bridge-node-asset.yml  ci.yml  debian-compat.yml  docker-release.yml  script-check.yml
crates/node/: Cargo.toml
crates/node/src/: config.rs  diagnose.rs  main.rs  poller.rs  reporter.rs  updater.rs  ws_client.rs
crates/node/src/forwarder/: cert_reloader.rs  limiter.rs  manager.rs  mod.rs  outbound.rs  selector.rs  splice.rs  tcp.rs  tls.rs  udp.rs  ws.rs
crates/node/tests/: cli_flags.rs
crates/panel/: Cargo.toml
crates/panel/src/: config.rs  dto.rs  main.rs
crates/panel/src/api/: auth.rs  diagnose.rs  geoip.rs  groups.rs  middleware.rs  mod.rs  node.rs  notify.rs  redeem.rs  stats.rs  system.rs  ws.rs
crates/panel/src/api/admin/: auth.rs  groups.rs  mod.rs  nodes.rs  password.rs  plans.rs  profiles.rs  rules.rs  settings.rs  shop.rs  user_groups.rs  users.rs
crates/panel/src/db/: error.rs  init.rs  mod.rs  pg_schema.rs  repo.rs  schema.rs
crates/panel/src/db/pg_repo/: groups.rs  kvs.rs  mod.rs  profiles.rs  rules.rs  settings.rs  stats.rs  tests.rs  traffic.rs  user_groups.rs  users.rs
crates/panel/src/db/sqlite_repo/: groups.rs  kvs.rs  mod.rs  orders.rs  profiles.rs  rules.rs  settings.rs  stats.rs  tests.rs  traffic.rs  user_groups.rs  users.rs
crates/panel/src/service/: groups.rs  mod.rs  node_config.rs  node_watch.rs  notify.rs  password.rs  profiles.rs  rules.rs  settings.rs  traffic.rs  users.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  models.rs  money.rs  protocol.rs
docs/: DEPLOYMENT.md  DISCLAIMER.md  NODE.md  NODE.zh-CN.md  REVERSE-PROXY.md  ROADMAP-v0.4.md  TLS-SIMPLE.md  VERSIONS.md  repo-test-parity.md
docs/internal/: TLS_WS_WSS_DESIGN.md
frontend/: .gitignore  eslint.config.js  index.html  install-deps.windows.ps1  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  RequireAdmin.tsx  RequireAuth.tsx  RoleHome.tsx  main.tsx  router.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.test.tsx  AuthContext.tsx  useAuth.ts
frontend/src/components/nodes/: CountryFlag.test.tsx  CountryFlag.tsx  NodeDesktopTable.tsx  NodeDetailDrawer.test.tsx  NodeDetailDrawer.tsx  NodeGroupSection.test.tsx  NodeGroupSection.tsx  NodeMobileList.tsx  NodeResourceBar.tsx  aggregate.test.ts  aggregate.ts  nodeHelpers.test.ts  shared.tsx  sort.ts  types.ts  upgrade.test.ts  upgrade.ts
frontend/src/i18n/: context.ts  en-US.ts  index.tsx  zh-CN.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Account.tsx  Dashboard.test.tsx  Dashboard.tsx  Forbidden.tsx  ForcePasswordChange.tsx  Groups.tsx  Login.tsx  NodeStatus.test.tsx  NodeStatus.tsx  NotifySettings.tsx  RedeemCodes.test.tsx  RedeemCodes.tsx  Register.tsx  Rules.test.tsx  Rules.tsx  Shop.test.tsx  Shop.tsx  SystemSettings.tsx  TunnelProfiles.tsx  UserDashboard.tsx  UserGroups.tsx  Users.test.tsx  Users.tsx
frontend/src/styles/: theme.css
frontend/src/test/: setup.ts
frontend/src/utils/: clipboard.ts  format.test.ts  format.ts  rulesIO.test.ts  rulesIO.ts  version.test.ts  version.ts
scripts/: check-repo-test-parity.sh  deploy-web-mode-check.sh  extract-changelog.sh  refactor-check.sh  relay-node-install.sh  release-check.sh  repo-test-parity-allowlist.txt
tests/: e2e_test.py
