[package]
name = "relay-node"
# Keep in sync with scripts/relay-node-install.sh (SCRIPT_VERSION) and the
# GitHub release tag. `--version` / `-V` read this via env!("CARGO_PKG_VERSION").
version = "1.0.9"
edition = "2021"
license.workspace = true

[dependencies]
relay-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.32"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
# v0.4.1: TLS Simple ingress (node terminates TLS directly via rustls).
# v0.4.16: disable tokio-rustls's DEFAULT features. Its default pulls in
# `aws_lc_rs` (→ rustls `aws_lc_rs`), so together with our explicit rustls
# `ring` feature the build ended up with BOTH ring AND aws-lc-rs. rustls 0.23
# then refuses to auto-pick a process-level CryptoProvider and panics on the
# first TLS handshake ("Could not automatically determine the process-level
# CryptoProvider"), which silently killed the WSS control channel. We enable
# `ring`/`tls12`/`logging` explicitly to match the old behavior minus
# aws-lc-rs, so ring is the ONLY provider and `main()` still pins it via
# `CryptoProvider::install_default()` for determinism.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
# v1.0.4: low-level socket options for IPv6-only dual-stack binding.
socket2 = "0.5"
# v1.0.8: Linux splice(2) zero-copy forwarding for unlimited (non-rate-limited)
# TCP rules — data moves inside the kernel via a pipe, never copied to
# userspace. Only used on Linux; other targets fall back to the userspace copy.
libc = "0.2"
# v1.0.9: sharded concurrent map for per-listener UDP sessions — per-packet
# lookups take a per-shard lock instead of one listener-wide mutex, removing
# session-lock contention on the hot UDP path.
dashmap = "6"
# v1.0.10: verify the sha256 of a self-upgrade binary download before swapping.
sha2 = "0.10"
# v1.0.10: semver comparison to reject self-upgrade downgrades/reinstalls (a
# compromised panel must not be able to roll a node back to an old, vulnerable
# release).
semver = "1"

[dev-dependencies]
# v0.4.16: test-only cert generator for the real WSS (wss://) regression test.
# Default features pull in `ring` (already a dependency) + `pem` — no aws-lc-rs,
# so it does NOT reintroduce the CryptoProvider ambiguity this PR fixes. Used
# only to mint a self-signed cert for an in-test TLS websocket server.
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring"] }
