[package]
name = "relay-panel"
version = "1.0.3"
edition = "2021"
license.workspace = true

[dependencies]
relay-shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
bcrypt = "0.16"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
